--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -1,10 +1,155 @@
+*{
+  box-sizing: border-box;
+} 
 .listing-header{
-  background-color: gray;
+  background-color: #f5f5f5;
   height: 128px;
+  &__logo{
+    margin: auto;
+    width: 12.5%;
+    text-align: center;
+    padding: 40px 0 0;
+  }
 }
-.listing-main{
-  .listing-form{
+.listing-content{
+  background-color: #f5f5f5;
+  height: auto;
+  .listing__main{
+    background-color: white;
+    height: auto;
     width: 700px;
     margin: 0 auto;
+
+    &__header{
+      text-align: center;
+      font-weight: bold;
+      padding: 32px 16px;
+      font-size: 22px;
+    }
+
+    &__form{
+      border-top: 1px solid #eee;
+      &__upload{
+        width: 620px;
+        padding: 40px;
+        &__title{
+          font-size: 16px;
+        }
+        &__require{
+          background: #ea352d;
+          margin: 0 0 0 8px;
+          padding: 2px 4px;
+          border-radius: 2px;
+          color: #fff;
+          font-size: 12px;
+          vertical-align: top;
+        }
+        &__comment{
+          margin: 8px 0 0;
+          line-height: 1.5;
+        }
+        &__box{
+          width: 620px;
+          display: block;
+          padding: 40px;
+          position: relative;
+          min-height: 162px;
+          background: #f5f5f5;
+          border: 1px dashed #ccc;
+          &__comment{
+            position: absolute;
+            top: 50%;
+            left: 16px;
+            right: 16px;
+            text-align: center;
+            font-size: 14px;
+            line-height: 1.5;
+          }
+        }
+      }
+      &__product{
+        padding: 40px;
+        border-top: 1px solid #eee;
+        .form-group{
+          margin: 40px 0 0;
+          .product-name{
+            font-weight: 600;
+          }
+          .require{
+            background: #ea352d;
+            margin: 0 0 0 8px;
+            padding: 2px 4px;
+            border-radius: 2px;
+            color: #fff;
+            font-size: 12px;
+            vertical-align: top;
+          }
+          .listing-input{
+            width:620px;
+            margin: 8px 0 0;
+            height: 48px;
+            padding: 10px 16px 8px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background: #fff;
+            line-height: 1.5;
+            font-size: 16px;
+          }
+          .listing-comment{
+            font-weight: 600;
+          }
+        }
+      }
+      &__detail{
+        display: flex;
+        padding: 40px;
+        border-top: 1px solid #eee;
+        &__title{
+          color: #888;
+          font-size: 14px;
+        }
+        &__box{
+          width: 400px;
+          margin: 0;
+          
+          &__form-group{
+            width: 400px;
+            margin: 0;
+            &__product-name{
+              font-weight: 600;
+            }
+            &__require{
+              background: #ea352d;
+              margin: 0 0 0 8px;
+              padding: 2px 4px;
+              border-radius: 2px;
+              color: #fff;
+              font-size: 12px;
+              vertical-align: top;
+            }
+            &__category-select{
+              width: 100%;
+              position: relative;
+              z-index: 2;
+              height: 48px;
+              padding: 0 16px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: 0;
+              font-size: 16px;
+              line-height: 1.5;
+              cursor: pointer;
+            }   
+          }
+        }
+      }
+    }
   }
+}
+
+
+
+.listing-footer{
+  background-color: gray;
+  height: 220px;
 }
