add_listing_page

--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -38,7 +38,7 @@
             %input.listing-input
         
         .listing__main__form__detail
-          %h2.listing__main__form__detail__title
+          %label.listing__main__form__detail__title
             商品の詳細
           .listing__main__form__detail__box
             .listing__main__form__detail__box__form-group
