--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -13,7 +13,7 @@
 }
 .listing-content{
   background-color: #f5f5f5;
-  height: auto;
+  display: flex;
   .listing__main{
     background-color: white;
     height: auto;
@@ -101,7 +101,6 @@
         }
       }
       &__detail{
-        display: flex;
         padding: 40px;
         border-top: 1px solid #eee;
         &__title{
@@ -109,9 +108,9 @@
           font-size: 14px;
         }
         &__box{
+          float: right;
           width: 400px;
           margin: 0;
-          
           &__form-group{
             width: 400px;
             margin: 0;
@@ -129,7 +128,6 @@
             }
             &__category-select{
               width: 100%;
-              position: relative;
               z-index: 2;
               height: 48px;
               padding: 0 16px;
@@ -146,10 +144,9 @@
     }
   }
 }
-
-
-
 .listing-footer{
-  background-color: gray;
+  width: 456px;
   height: 220px;
+  margin: 0 auto;
+  background-color: #f5f5f5;
 }
