--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -40,14 +40,14 @@
         .listing__main__form__detail
           %label.listing__main__form__detail__title
             商品の詳細
-          .listing__main__form__detail__box
-            .listing__main__form__detail__box__form-group
+          %ul.listing__main__form__detail__box
+            %li.listing__main__form__detail__box__form-group
               %label.listing__main__form__detail__box__form-group__product-name
                 カテゴリー
               %span.listing__main__form__detail__box__form-group__require
                 必須
               %input.listing__main__form__detail__box__form-group__category-select
-            .listing__main__form__detail__box__form-group
+            %li.listing__main__form__detail__box__form-group
               %label.listing__main__form__detail__box__form-group__product-name
                 商品の状態
               %span.listing__main__form__detail__box__form-group__require
@@ -58,6 +58,6 @@
 
 
 
-  .listing-footter
+  .listing-footer
 
 
