--- a/app/assets/stylesheets/users/index.scss
+++ b/app/assets/stylesheets/users/index.scss
@@ -1,30 +1,12 @@
 .mypage__container{
+  background-color: #f5f5f5;
   width: 1020px;
   margin: 40px 68px;
-  height: 100%;
+  display: flex;
   .mypage__sidebar{
     background-color: red;
     width: 280px;
     margin-right: 40px;
-    height: 100%;
     float: left;
-  }
-  .mypage__main{
-    background-color: blue;
-    height: 100%;
-    width: 700px;
-    float: right;
-    &__usericon{
-      height: 200px;
-    }
-    &__information{
-      background-color: green;
-      height: 300px;
-    }
-    &__tradehistory{
-      margin-top: 40px;
-      background-color: yellow;
-      height: 300px;
-    }
   }
 }
