--- a/app/views/users/_mypage-main.html.haml
+++ b/app/views/users/_mypage-main.html.haml
@@ -12,9 +12,9 @@
   .mypage__main__information
     %ul.mypage__main__information__tab
       %li.mypage__main__information__tab__title
-        = link_to 'お知らせ', "/users"
+        = link_to('お知らせ', "/users", class:'active')
       %li.mypage__main__information__tab__title
-        = link_to 'やることリスト', "/users"
+        = link_to('やることリスト', "/users", class:'inactive')
     %ul.mypage__main__information__content
       = render 'mypage__notification-list'
       = render 'mypage__notification-list'
@@ -26,9 +26,9 @@
     .mypage__main__tradehistory__bottom
       %ul.mypage__main__tradehistory__bottom__tab
         %li.mypage__main__tradehistory__bottom__tab__name
-          =link_to '取引中','/users'
+          =link_to('取引中','/users', class:"active")
         %li.mypage__main__tradehistory__bottom__tab__name
-          =link_to '過去の取引', '/users'
+          =link_to('過去の取引', '/users',class:"inactive")
       .mypage__main__tradehistory__bottom__content
         %ul.mypage__main__tradehistory__bottom__content__now
           %li.mypage__main__tradehistory__bottom__content__now__list 現在取引中の商品はありません
