--- a/app/views/users/_mypage-main.html.haml
+++ b/app/views/users/_mypage-main.html.haml
@@ -11,26 +11,24 @@
           %h3 出品数 :0
   .mypage__main__information
     %ul.mypage__main__information__tab
-      %li.mypage__main__information__tab__title
-        = link_to('お知らせ', "/users", class:'active')
-      %li.mypage__main__information__tab__title
-        = link_to('やることリスト', "/users", class:'inactive')
-    %ul.mypage__main__information__content
+      %li.mypage__main__information__tab__title.active お知らせ
+      %li.mypage__main__information__tab__title やることリスト
+    %ul.mypage__main__information__content.is-shown
       = render 'mypage__notification-list'
       = render 'mypage__notification-list'
       = render 'mypage__notification-list'
       %li.notification__link
         = link_to '一覧を見る', "/"
+    %ul.mypage__main__information__content
+      %li.mypage__main__information__content__todo 現在、やることはありません
   .mypage__main__tradehistory
     .mypage__main__tradehistory__head 購入した商品
     .mypage__main__tradehistory__bottom
       %ul.mypage__main__tradehistory__bottom__tab
-        %li.mypage__main__tradehistory__bottom__tab__name
-          =link_to('取引中','/users', class:"active")
-        %li.mypage__main__tradehistory__bottom__tab__name
-          =link_to('過去の取引', '/users',class:"inactive")
+        %li.mypage__main__tradehistory__bottom__tab__name.active 取引中
+        %li.mypage__main__tradehistory__bottom__tab__name 過去の取引
       .mypage__main__tradehistory__bottom__content
         %ul.mypage__main__tradehistory__bottom__content__now
-          %li.mypage__main__tradehistory__bottom__content__now__list 現在取引中の商品はありません
-
+          %li.mypage__main__tradehistory__bottom__content__now__list.is-shown 現在取引中の商品はありません
+          %li.mypage__main__tradehistory__bottom__content__now__list 過去に取引した商品はありません
 
