--- a/app/assets/stylesheets/registration_login.scss
+++ b/app/assets/stylesheets/registration_login.scss
@@ -29,31 +29,31 @@ body{
         }
       }
     }
-  }
+    
 
-  .btn-default{
-    color: #fff;
-    display: block;
-    text-align: center;
-    margin: 0 auto;
-    width: 328px;
-    height: 50px;
-    line-height: 48px;
-    font-size: 14px;
-  }
-
-  .input-default {
-    height: 48px;
-    padding: 10px 16px 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background: #fff;
-    line-height: 1.5;
-    font-size: 16px;
+.btn-default{
+  color: #fff;
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  width: 328px;
+  height: 50px;
+  line-height: 48px;
+  font-size: 14px;
 }
-  
+
+.input-default {
+  height: 28px;
+  width: 294px;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 16px;
+}
+    
   .registration-main{
-    display: block;
     height: 731px;
     .login__box{
       max-width: 456px;
@@ -61,17 +61,18 @@ body{
       margin: 0 auto;
       
       &--account-blue{
-        height: 144px;
         background-color: white;
         padding: 40px 64px;
         text-align: center;
         p{
+          height: 14px;
           font-size: 14px;
           color: #333333;
+          vertical-align:text-top;
         }
         a{
           margin: 8px auto 0;
-          width: 328px;
+          width: 326px;
           display: block;
           border: 1px solid #0099e8;
           background: #0099e8;
@@ -84,34 +85,32 @@ body{
       }
       &--social{
         border-top: 1px solid #eee;
-        height: 181px;
         background: white;
         padding: 32px 64px;
-
-        
         .btn-sns-facebook{
           background: #385185;
-          i{
-            height: 26px;
-            width: 26px;
+          i.fa-facebook-square{
+            margin: 8px 0 0 8px;
+            font-size: 30px;
+            float: left;
+            object-fit: cover;
           }
         }
-        
         .btn-sns-google{
           color: black;
           background: #fffffe;
           margin-top: 16px;
+          background: #fff url("/assets/google.svg/") ;
+          background-repeat: no-repeat;
         }
       }
       
       form{
         background: #fff;
-        padding: 24px 64px 32px;
-        height: 406px;
         .login__box--form{
-          input{
-            width: 328px;
-            height: 48px;
+          padding: 24px 64px 32px;
+          .form-email{
+          
           }
           .form-password{
             margin-top: 24px;
@@ -145,6 +144,7 @@ body{
           margin: 40px 0 0;
           color: #0099e8;
           text-decoration: none;
+          height: 14px;
         }
         a:hover{
           text-decoration: underline;
@@ -153,42 +153,45 @@ body{
       }
     }
   }
-  .registration_login-footer{
-    width: 456px;
-    height: 220px;
-    margin: 0 auto;
-    padding: 40px 0;
-    .clearfix{
-      
-      li{
-        display: inline-block;
-        margin-right: 10px;
-        a{
-          text-decoration: none;
-          font-size: 12px;
-        }
-        a:visited{
-          color: #333333;
+    .registration_login-footer{
+      width: 456px;
+      height: 140px;
+      margin: 0 auto;
+      padding: 40px 0;
+      .clearfix{
+        height: 12px;
+        li{
+          display: inline-block;
+          margin-right: 10px;
+          height: 12px;
+          a{
+            text-decoration: none;
+            height: 12px;
+            font-size: 12px;
+          }
+          a:visited{
+            color: #333333;
+          }
         }
       }
-    }
-    a.registration-logo{
-      display: block;
-      width: 80px;
-      height: 65px;
-      margin: 40px auto 0;
-      img{
+      a.registration-logo{
+        display: block;
         width: 80px;
         height: 65px;
+        margin: 40px auto 0;
+        img{
+          width: 80px;
+          height: 65px;
+        }
       }
-    }
-    p{
-      margin: 8px 0 0;
-      font-size: 14px;
-      small{
-        font-size: 12px;
-        color: #333333;
-        
+      p{
+        margin: 8px 0 0;
+        font-size: 14px;
+        small{
+          font-size: 12px;
+          color: #333333;
+          
+        }
       }
     }
   }
