--- a/app/assets/stylesheets/registration_login.scss
+++ b/app/assets/stylesheets/registration_login.scss
@@ -17,9 +17,6 @@ body{
         display: inline-block;
         margin: 40px 0 0;
         a{
-          width: 185px;
-          height: 49px;
-          line-height: 49px;
           display: inline-block;
           margin: 0 8px 0 0;
           img{
@@ -115,7 +112,7 @@ body{
           .form-password{
             margin-top: 24px;
           }
-          .from_captcha{
+          .form_captcha{
             width: 328px;
             height: 78px;
             margin-top: 24px;
