本人情報登録のビュー

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,4 +7,5 @@
 @import "mixin";
 @import "./products/products";
 @import "./users/index";
-@import "./users/mypage_main"
+@import "./users/mypage_main";
+@import "./users/mypage_info_registration"
