--- a/app/assets/stylesheets/users/mypage_info_registration.scss
+++ b/app/assets/stylesheets/users/mypage_info_registration.scss
@@ -1,64 +1,53 @@
-.mypage__info__registration__header{
-  font-size: 24px;
-  font-weight: bold;
-  padding: 8px 24px;
-  text-align: center;
-}
-.mypage__info__registration__contents{
-  padding: 64px;
-  border-top: 1px solid #f5f5f5;
-  &__textbox{
-    &__left{
-      margin-top: 8px;
-      font-size: 16px;
-      line-height: 1.5;
-    }
-    &__right{
-      margin-top: 8px;
-      font-size: 14px; 
-      text-align:right;
-      cursor: pointer;
-      a{
-      }
-    }
+.mypage__main{
+  background: #fff;
+  .mypage__info__registration__header{
+    font-size: 24px;
+    font-weight: bold;
+    padding: 8px 24px;
+    text-align: center;
   }
-  .mypage-info-form-box{
-    margin-top: 40px;
-    label{
-      font-weight: 600;
-    }
-    p{
-      margin-top: 8px;
-      line-height: 1.5;
-    }
-    span{
-      margin-left: 8px;
-      padding: 2px 4px;
-      border-radius: 2px;
-      vertical-align: top;
-      font-size: 12px;
-      background: #ccc;
-      color: #fff;
-    }
-    input{
-      box-sizing: border-box;
-      width: 100%;
-      height: 48px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      padding: 10px 16px 8px;
-      font-size: 16px;
-    }
-    .select_wrap{
-      position: relative;
-      i{
-        position: absolute;
-        right: 16px;
-        top: 50%;
-        z-index: 2;
-        color: #888;    
+  .mypage__info__registration__contents{
+    padding: 64px;
+    border-top: 1px solid #f5f5f5;
+    &__textbox{
+      &__left{
+        margin-top: 8px;
+        font-size: 14px;
+        line-height: 1.5;
       }
-      select{
+      &__right{
+        margin-top: 8px;
+        font-size: 14px; 
+        text-align:right;
+        cursor: pointer;
+        a{
+          color: #0099e8;
+        }
+        i{
+          color: #0099e8;
+        }
+      }
+    }
+    .mypage-info-form-box{
+      margin-top: 40px;
+      label{
+        font-weight: 600;
+      }
+      p{
+        margin-top: 8px;
+        line-height: 1.5;
+      }
+      span{
+        margin-left: 8px;
+        padding: 2px 4px;
+        border-radius: 2px;
+        vertical-align: text-top;
+        font-size: 12px;
+        background: #ccc;
+        color: #fff;
+      }
+      input{
+        margin-top: 8px; 
         box-sizing: border-box;
         width: 100%;
         height: 48px;
@@ -66,24 +55,51 @@
         border-radius: 4px;
         padding: 10px 16px 8px;
         font-size: 16px;
+        outline: 0;
       }
-    }
-    .btn-red{
-      background: #ea352d;
-      border: 1px solid #ea352d;
-      color: #fff;
-      width: 100%;
-      cursor: pointer;
-      font-size: 14px;
-      line-height: 48px;
-    }
-    .mypage-info-about{
-      float: right;
-      font-size: 14px;
-      cursor: pointer;
-      a{
+      .select_wrap{
+        margin-top: 8px; 
+        position: relative;
+        select{
+          -webkit-appearance: none;
+          padding: 0 16px;
+          width: 100%;
+          height: 48px;
+          border: 1px solid #ccc;
+          border-radius: 4px;
+          font-size: 16px;
+          background: #fff;
+          outline: 0;
+        }
+        i{
+          height: 100%;
+          display: block;
+          position: absolute;
+          top: 35%;
+          right: 16px;
+          z-index: 2;
+          color: #888;    
+        }
       }
-      i{
+      .btn-red{
+        background: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+        width: 100%;
+        cursor: pointer;
+        font-size: 14px;
+        line-height: 48px;
+      }
+      .mypage-info-about{
+        float: right;
+        font-size: 14px;
+        cursor: pointer;
+        a{
+          color: #0099e8;
+        }
+        i{
+          color: #0099e8;
+        }
       }
     }
   }
