サイドバーの基本を作成
サイドバーの大元になる形を作成

--- a/app/views/users/_mypage-sidebar.html.haml
+++ b/app/views/users/_mypage-sidebar.html.haml
@@ -1,1 +1,19 @@
 .mypage__sidebar
+  .l-side
+    %nav.mypage-nav
+      %ul.mypage-nav-list
+        %li.mypage-nav-list-itemavtive
+          マイページ
+          %i.fas.fa-chevron-right
+        
+        = render partial: 'mypage-sidebar2.html.haml'
+
+        %li.mypage-nav-list-item
+          お知らせ
+          %i.fas.fa-chevron-right
+
+        = render partial: 'mypage-sidebar2.html.haml'
+
+
+
+
