--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -1,12 +1,13 @@
 *{
   box-sizing: border-box;
+  font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;
 } 
 .listing-header{
   background-color: #f5f5f5;
   height: 128px;
   &__logo{
     margin: auto;
-    width: 12.5%;
+    width: 20%;
     text-align: center;
     padding: 40px 0 0;
   }
@@ -22,7 +23,6 @@
 
     &__header{
       text-align: center;
-      font-weight: bold;
       padding: 32px 16px;
       font-size: 22px;
     }
@@ -33,6 +33,7 @@
         width: 620px;
         padding: 40px;
         &__title{
+          font-weight: 600;
           font-size: 16px;
         }
         &__require{
@@ -50,18 +51,14 @@
         }
         &__box{
           width: 620px;
-          display: block;
           padding: 40px;
-          position: relative;
           min-height: 162px;
           background: #f5f5f5;
           border: 1px dashed #ccc;
           &__comment{
-            position: absolute;
-            top: 50%;
+            text-align: center;
             left: 16px;
             right: 16px;
-            text-align: center;
             font-size: 14px;
             line-height: 1.5;
           }
@@ -98,9 +95,23 @@
           .listing-comment{
             font-weight: 600;
           }
+          .listing-textarea{
+            margin: 8px 0 0;
+            display: block;
+            width: 100%;
+            max-width: 100%;
+            min-height: 104px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            background: #fff;
+            font-size: 16px;
+            line-height: 1.5;
+          }
         }
       }
       &__detail{
+        display: flex;
+        justify-content: space-between;
         padding: 40px;
         border-top: 1px solid #eee;
         &__title{
@@ -108,7 +119,6 @@
           font-size: 14px;
         }
         &__box{
-          display: flex;
           width: 400px;
           margin: 0;
           &__form-group{
@@ -141,11 +151,153 @@
           }
         }
       }
+      &__delivery{
+        display: flex;
+        justify-content: space-between;
+        padding: 40px;
+        border-top: 1px solid #eee;
+        &__title{
+          color: #888;
+          font-size: 14px;
+        }
+        &__box{
+          width: 400px;
+          margin: 0;
+          &__form-group{
+            width: 400px;
+            margin: 0;
+            &__product-name{
+              font-weight: 600;
+            }
+            &__require{
+              background: #ea352d;
+              margin: 0 0 0 8px;
+              padding: 2px 4px;
+              border-radius: 2px;
+              color: #fff;
+              font-size: 12px;
+              vertical-align: top;
+            }
+            &__category-select{
+              width: 100%;
+              z-index: 2;
+              height: 48px;
+              padding: 0 16px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: 0;
+              font-size: 16px;
+              line-height: 1.5;
+              cursor: pointer;
+            }   
+          }
+        }
+      }
+      &__price{
+        display: flex;
+        justify-content: space-between;
+        padding: 0 0 24px;
+        border: 0;
+        padding: 40px;
+        border-top: 1px solid #eee;
+        &__title{
+          color: #888;
+          font-size: 14px;
+        }
+        &__box{
+          width: 400px;
+          margin: 0;
+          &__price{
+            display: flex;
+            justify-content: space-between;
+            padding: 0 0 24px;
+            &__left{
+              line-height: 48px;
+            }
+            &__right{
+
+              &__default{
+                display: inline-block;
+                width: 80%;
+                margin: 0 0 0 5%;
+                height: 48px;
+                padding: 10px 16px 8px;
+                border-radius: 4px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+              }
+
+            }
+          }
+          &__fee{
+            padding: 24px 0;
+            border-top: 1px solid #ccc;
+          }
+          &__profit{
+            padding: 24px 0;
+            border-top: 1px solid #ccc;
+          }
+        }
+      }
+      &__last{
+        padding: 40px;
+        border-top: 1px solid #eee;
+        &__attention{
+
+        }
+        .btn-default{
+          margin: 40px 0 0;
+          display: block;
+          width: 100%;
+          line-height: 48px;
+          font-size: 14px;
+          border: 1px solid transparent;
+          -webkit-transition: all ease-out .3s;
+          transition: all ease-out .3s;
+          cursor: pointer;
+          text-align: center;
+        }
+        .btn-red{
+          background: #ea352d;
+          border: 1px solid #ea352d;
+          color: #fff;
+        }
+        .btn-gray{
+          width: 45%;
+          margin: 24px auto 0;
+          background: #aaa;
+          border: 1px solid #aaa;
+          color: #fff;
+        }
+
+      }
     }
   }
 }
 .listing-footer{
   height: 220px;
-  margin: 0 auto;
   background-color: #f5f5f5;
+  &__content{
+    width: 456px;
+    height: 220px;
+    margin: 0 auto;
+    padding: 40px 0;
+    &__terms{
+      display: flex;
+      justify-content: space-around;
+      li{
+        font-size: 12px;
+      }
+    }
+    &__logo{
+      width: 18%;
+      margin: 40px auto 0;
+      p{
+        font-size: 13px;
+        margin: 8px 0 0;
+      }
+    }
+  }
 }
