--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -20,8 +20,7 @@
           .listing__main__form__upload__box
             .listing__main__form__upload__box__comment
               ドラッグアンドドロップ
-              %br
-              またはクリックしてファイルをアップロード
+              %br またはクリックしてファイルをアップロード
 
         .listing__main__form__product
           .form-group
@@ -29,35 +28,140 @@
               商品名
             %span.require
               必須
-            %input.listing-input
+            %input.listing-input{placeholder: "商品名（必須 40文字まで)"}
           .form-group  
             %label.listing-comment
               商品の説明
             %span.require
               必須
-            %input.listing-input
+            %textarea.listing-textarea{placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"}
         
         .listing__main__form__detail
           %label.listing__main__form__detail__title
             商品の詳細
-          %ul.listing__main__form__detail__box
-            %li.listing__main__form__detail__box__form-group
+          .listing__main__form__detail__box
+            .listing__main__form__detail__box__form-group
               %label.listing__main__form__detail__box__form-group__product-name
                 カテゴリー
               %span.listing__main__form__detail__box__form-group__require
                 必須
-              %input.listing__main__form__detail__box__form-group__category-select
-            %li.listing__main__form__detail__box__form-group
+              %select.listing__main__form__detail__box__form-group__category-select
+                %option{value: ""} ---
+            
+              %label.listing__main__form__detail__box__form-group__product-size
+                サイズ
+              %span.listing__main__form__detail__box__form-group__require
+                必須
+              %select.listing__main__form__detail__box__form-group__category-select
+                %option{value: ""} ---
+                %option{value: "153"} XXS以下
+                %option{value: "154"} XS(SS)
+                %option{value: "2"} S
+                %option{value: "3"} M
+                %option{value: "4"} L
+                %option{value: "5"} XL(LL)
+                %option{value: "155"} 2XL(3L)
+                %option{value: "156"} 3XL(4L)
+                %option{value: "157"} 4XL(5L)以上
+                %option{value: "7"} FREE SIZE
+
+            .listing__main__form__detail__box__form-group
               %label.listing__main__form__detail__box__form-group__product-name
                 商品の状態
               %span.listing__main__form__detail__box__form-group__require
                 必須
-              %input.listing__main__form__detail__box__form-group__category-select
+              %select.listing__main__form__detail__box__form-group__category-select
+                %option{value: ""} ---
+                %option{value: "1"} 新品、未使用
+                %option{value: "2"} 未使用に近い
+                %option{value: "3"} 目立った傷や汚れなし
+                %option{value: "4"} やや傷や汚れあり
+                %option{value: "5"} 傷や汚れあり
+                %option{value: "6"} 全体的に状態が悪い
+      
+        .listing__main__form__delivery
+          %label.listing__main__form__delivery__title
+            配送について
+          .listing__main__form__delivery__box
+            .listing__main__form__delivery__box__form-group
+              %label.listing__main__form__delivery__box__form-group__product-name
+                配送料の負担
+              %span.listing__main__form__delivery__box__form-group__require
+                必須
+              %select.listing__main__form__delivery__box__form-group__category-select
+                %option{value: ""} ---
+                %option{value: "2"} 送料込み(出品者負担)
+                %option{value: "1"} 着払い(購入者負担)
+            .listing__main__form__delivery__box__form-group
+              %label.listing__main__form__delivery__box__form-group__product-name
+                発送元の地域
+              %span.listing__main__form__delivery__box__form-group__require
+                必須
+              %select.listing__main__form__delivery__box__form-group__category-select
+                %option{value: ""} ---
+            .listing__main__form__delivery__box__form-group
+              %label.listing__main__form__delivery__box__form-group__product-name
+                発送までの日数
+              %span.listing__main__form__delivery__box__form-group__require
+                必須
+              %select.listing__main__form__delivery__box__form-group__category-select
+                %option{value: ""} ---
+                %option{value: "1"} 1~2日で発送
+                %option{value: "2"} 2~3日で発送
+                %option{value: "3"} 4~7日で発送
 
+      
+        .listing__main__form__price
+          %label.listing__main__form__price__title
+            販売価格(300〜9,999,999)
+          .listing__main__form__price__box
+            .listing__main__form__price__box__price
+              %label.listing__main__form__price__box__price__left
+                価格
+                %span.listing__main__form__price__box__price__left__require
+                  必須
+              .listing__main__form__price__box__price__right
+                %label.listing__main__form__price__box__price__right__currency
+                  ¥
+                %input.listing__main__form__price__box__price__right__default{placeholder: "例）300", value: ""}
 
+            .listing__main__form__price__box__fee
+              %label.listing__main__form__price__box__title
+                販売手数料(10%)
+            .listing__main__form__price__box__profit
+              %label.listing__main__form__price__box__profit__title
+                販売利益
 
+        .listing__main__form__last
+          .listing__main__form__last__attention
+            %p
+              禁止されている出品、行為を必ずご確認ください。
+            %p
+              またブランド品でシリアルナンバー等がある場合はご記載ください。偽ブランドの販売は犯罪であり処罰される可能性があります。
+            %p
+              また、出品をもちまして加盟店規約に同意したことになります。
+
+          %button.btn-default.btn-red
+            出品する
+          %button.btn-default.btn-gray
+            もどる
 
 
   .listing-footer
+    .listing-footer__content
+      %ul.listing-footer__content__terms
+        %li
+          プライバシーポリシー
+        %li
+          メルカリ利用規約
+        %li
+          特定商取引に関する表記
+      .listing-footer__content__logo
+        =image_tag 'logo-gray.svg'
+        %p
+          ©2019Mercari
+    
+
+
 
 
