--- a/app/views/top/_header_category1.html.haml
+++ b/app/views/top/_header_category1.html.haml
@@ -1,2 +1,2 @@
-%li.header-bottom__search-menu__category__wrapper__1
-  = link_to big_category,"/"
+%li.bigcategory-element{data: {id: "#{big_category.id}"}}
+  = link_to big_category.name,"/"
