--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,5 @@
 @import "font-awesome";
 @import "./top/_content";
 @import "slick";
-@import "./products/products"
+@import "./mixin.scss";
+@import "./products/products";
