--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -22,6 +22,7 @@
     margin: 0 auto;
 
     &__header{
+      font-weight: bold;
       text-align: center;
       padding: 32px 16px;
       font-size: 22px;
@@ -30,6 +31,7 @@
     &__form{
       border-top: 1px solid #eee;
       &__upload{
+        font-size: 16px;
         width: 620px;
         padding: 40px;
         &__title{
@@ -37,19 +39,18 @@
           font-size: 16px;
         }
         &__require{
-          background: #ea352d;
-          margin: 0 0 0 8px;
-          padding: 2px 4px;
-          border-radius: 2px;
-          color: #fff;
-          font-size: 12px;
-          vertical-align: top;
+          @include listing-require;
         }
         &__comment{
-          margin: 8px 0 0;
+          font-size: 14px;
+          margin: 8px 0 16px;
           line-height: 1.5;
         }
         &__box{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
           width: 620px;
           padding: 40px;
           min-height: 162px;
@@ -65,47 +66,32 @@
         }
       }
       &__product{
+        font-size: 14px;
         padding: 40px;
         border-top: 1px solid #eee;
         .form-group{
-          margin: 40px 0 0;
+          @include listing-main-title;
           .product-name{
             font-weight: 600;
           }
           .require{
-            background: #ea352d;
-            margin: 0 0 0 8px;
-            padding: 2px 4px;
-            border-radius: 2px;
-            color: #fff;
-            font-size: 12px;
-            vertical-align: top;
+            @include listing-require;
           }
           .listing-input{
-            width:620px;
-            margin: 8px 0 0;
-            height: 48px;
+            @include listing-box;
             padding: 10px 16px 8px;
+            height: 48px;
             border-radius: 4px;
-            border: 1px solid #ccc;
-            background: #fff;
-            line-height: 1.5;
-            font-size: 16px;
           }
           .listing-comment{
             font-weight: 600;
           }
           .listing-textarea{
-            margin: 8px 0 0;
-            display: block;
-            width: 100%;
+            @include listing-box;
+            padding: 10px;
+            overflow: auto;
             max-width: 100%;
             min-height: 104px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            background: #fff;
-            font-size: 16px;
-            line-height: 1.5;
           }
         }
       }
@@ -115,38 +101,22 @@
         padding: 40px;
         border-top: 1px solid #eee;
         &__title{
+          @include listing-main-title;
           color: #888;
-          font-size: 14px;
         }
         &__box{
           width: 400px;
           margin: 0;
           &__form-group{
+            @include listing-sub-title;
             width: 400px;
-            margin: 0;
-            &__product-name{
-              font-weight: 600;
-            }
+            margin: 40px 0 0;
+
             &__require{
-              background: #ea352d;
-              margin: 0 0 0 8px;
-              padding: 2px 4px;
-              border-radius: 2px;
-              color: #fff;
-              font-size: 12px;
-              vertical-align: top;
+              @include listing-require;
             }
             &__category-select{
-              width: 100%;
-              z-index: 2;
-              height: 48px;
-              padding: 0 16px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              background: 0;
-              font-size: 16px;
-              line-height: 1.5;
-              cursor: pointer;
+              @include category-select;
             }   
           }
         }
@@ -157,38 +127,24 @@
         padding: 40px;
         border-top: 1px solid #eee;
         &__title{
+          @include listing-main-title;
           color: #888;
-          font-size: 14px;
         }
         &__box{
           width: 400px;
           margin: 0;
           &__form-group{
+            margin: 40px 0 0;
             width: 400px;
-            margin: 0;
             &__product-name{
-              font-weight: 600;
+              margin: 40px 0 0;
+              @include listing-sub-title;
             }
             &__require{
-              background: #ea352d;
-              margin: 0 0 0 8px;
-              padding: 2px 4px;
-              border-radius: 2px;
-              color: #fff;
-              font-size: 12px;
-              vertical-align: top;
+              @include listing-require;
             }
             &__category-select{
-              width: 100%;
-              z-index: 2;
-              height: 48px;
-              padding: 0 16px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              background: 0;
-              font-size: 16px;
-              line-height: 1.5;
-              cursor: pointer;
+              @include category-select;
             }   
           }
         }
@@ -201,8 +157,8 @@
         padding: 40px;
         border-top: 1px solid #eee;
         &__title{
+          @include listing-main-title;
           color: #888;
-          font-size: 14px;
         }
         &__box{
           width: 400px;
@@ -228,7 +184,6 @@
                 line-height: 1.5;
                 font-size: 16px;
               }
-
             }
           }
           &__fee{
@@ -245,7 +200,14 @@
         padding: 40px;
         border-top: 1px solid #eee;
         &__attention{
-
+          font-size: 14px;
+          a{
+            color: #0099e8;
+            text-decoration: none;
+          }
+          a:hover{
+            @include a-tag-hover;
+          }
         }
         .btn-default{
           margin: 40px 0 0;
@@ -254,8 +216,6 @@
           line-height: 48px;
           font-size: 14px;
           border: 1px solid transparent;
-          -webkit-transition: all ease-out .3s;
-          transition: all ease-out .3s;
           cursor: pointer;
           text-align: center;
         }
@@ -270,6 +230,9 @@
           background: #aaa;
           border: 1px solid #aaa;
           color: #fff;
+        }
+        .btn-gray:hover {
+          opacity: 0.8;
         }
 
       }
@@ -294,10 +257,14 @@
     &__logo{
       width: 18%;
       margin: 40px auto 0;
-      p{
-        font-size: 13px;
-        margin: 8px 0 0;
-      }
+        text-align: center;
+    }
+    &__logo:hover{
+      @include a-tag-hover;
+    }
+    p{
+      text-align: center;
+      font-size: 13px;
     }
   }
 }
