--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -11,20 +11,25 @@
 
       .listing__main__form
         .listing__main__form__upload
-          %label.listing__main__form__upload__title
+          %h2.listing__main__form__upload__title
             出品画像
-          %span.listing__main__form__upload__require
-            必須
+            %span.listing__main__form__upload__require
+              必須
+
           %p.listing__main__form__upload__comment
             最大10枚までアップロードできます
           .listing__main__form__upload__box
             .listing__main__form__upload__box__comment
-              ドラッグアンドドロップ
-              %br またはクリックしてファイルをアップロード
+              %label
+                %input.listing-upload-drop-file{multiple: "multiple", style: "display: none;", type: "file"}
+                %pre.visible-pc
+                  ドラッグアンドドロップ
+                  またはクリックしてファイルをアップロード
+
 
         .listing__main__form__product
           .form-group
-            %label.product-name
+            %label
               商品名
             %span.require
               必須
@@ -41,14 +46,14 @@
             商品の詳細
           .listing__main__form__detail__box
             .listing__main__form__detail__box__form-group
-              %label.listing__main__form__detail__box__form-group__product-name
+              %label
                 カテゴリー
               %span.listing__main__form__detail__box__form-group__require
                 必須
               %select.listing__main__form__detail__box__form-group__category-select
                 %option{value: ""} ---
-            
-              %label.listing__main__form__detail__box__form-group__product-size
+            .listing__main__form__detail__box__form-group
+              %label
                 サイズ
               %span.listing__main__form__detail__box__form-group__require
                 必須
@@ -66,7 +71,7 @@
                 %option{value: "7"} FREE SIZE
 
             .listing__main__form__detail__box__form-group
-              %label.listing__main__form__detail__box__form-group__product-name
+              %label
                 商品の状態
               %span.listing__main__form__detail__box__form-group__require
                 必須
@@ -82,6 +87,7 @@
         .listing__main__form__delivery
           %label.listing__main__form__delivery__title
             配送について
+          %a.form-question
           .listing__main__form__delivery__box
             .listing__main__form__delivery__box__form-group
               %label.listing__main__form__delivery__box__form-group__product-name
@@ -135,11 +141,22 @@
         .listing__main__form__last
           .listing__main__form__last__attention
             %p
-              禁止されている出品、行為を必ずご確認ください。
+              %a
+                =link_to "禁止されている出品", "https://www.mercari.com/jp/help_center/getting_started/prohibited_items/"
+              、
+              %a
+                =link_to "行為","https://www.mercari.com/jp/help_center/getting_started/prohibited_conduct/"
+              を必ずご確認ください。
             %p
-              またブランド品でシリアルナンバー等がある場合はご記載ください。偽ブランドの販売は犯罪であり処罰される可能性があります。
+              またブランド品でシリアルナンバー等がある場合はご記載ください。
+              %a
+              =link_to "偽ブランドの販売","https://www.mercari.com/jp/help_center/getting_started/counterfeit_goods/"
+              は犯罪であり処罰される可能性があります。
             %p
-              また、出品をもちまして加盟店規約に同意したことになります。
+              また、出品をもちまして
+              %a
+              =link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
+              に同意したことになります。
 
           %button.btn-default.btn-red
             出品する
@@ -158,8 +175,8 @@
           特定商取引に関する表記
       .listing-footer__content__logo
         =image_tag 'logo-gray.svg'
-        %p
-          ©2019Mercari
+      %p
+        ©2019Mercari
     
 
 
