デプロイ時のエラー修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,5 +7,5 @@
 @import "mixin";
 @import "./products/products";
 @import "./users/index";
-@import "./users/mypage_main"
-@import "registration_login"
+@import "./users/mypage_main";
+@import "registration_login";
