--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -17,13 +17,12 @@
 
           %p.listing__main__form__upload__comment
             最大10枚までアップロードできます
-          .listing__main__form__upload__box
+          %label.listing__main__form__upload__box
             .listing__main__form__upload__box__comment
-              %label
-                %input.listing-upload-drop-file{multiple: "multiple", style: "display: none;", type: "file"}
-                %pre.visible-pc
-                  ドラッグアンドドロップ
-                  またはクリックしてファイルをアップロード
+              %input.listing-upload-drop-file{multiple: "multiple", style: "display: none;", type: "file"}
+              %pre.visible-pc
+                ドラッグアンドドロップ
+                またはクリックしてファイルをアップロード
 
 
         .listing__main__form__product
