--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -25,15 +25,13 @@
 
 
     .listing__form__product
-      .form-group
-        %label
-          商品名
+      .listing__form__product__form-group
+        商品名
         %span.require
           必須
         %input.listing-input{placeholder: "商品名（必須 40文字まで)"}
-      .form-group  
-        %label.listing-comment
-          商品の説明
+      .listing__form__product__form-group 
+        商品の説明
         %span.require
           必須
         %textarea.listing-textarea{placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"}
