--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -69,11 +69,8 @@
       font-size: 14px;
       padding: 40px;
       border-top: 1px solid #eee;
-      .form-group{
+      &__form-group{
         @include listing-main-title;
-        .product-name{
-          font-weight: 600;
-        }
         .require{
           @include listing-require;
         }
@@ -82,6 +79,7 @@
           padding: 10px 16px 8px;
           height: 48px;
           border-radius: 4px;
+          margin: 0 0 40px 0;
         }
         .listing-comment{
           font-weight: 600;
