デザインの使い回し
以前作成した本人確認情報と同じデザインが多々あったので、それを使い回すようにした。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,8 +5,10 @@
 @import "./top/_content";
 @import "slick";
 @import "mixin";
+@import "./common_layout/form";
 @import "./products/products";
 @import "./users/index";
 @import "./users/mypage_main";
 @import "./users/mypage_info_registration";
-@import "registration_login"
+@import "registration_login";
+@import "./phone_number.scss"
