--- a/app/views/user_identifications/index.html.haml
+++ b/app/views/user_identifications/index.html.haml
@@ -29,7 +29,8 @@
       .mypage-info-form-box
         %button{type:"submit",class:"btn-red"} 登録する
       .mypage-info-form-box
-        .mypage-info-about
-          = link_to('本人情報の登録について',"/")
-          %i.fas.fa-chevron-right
+        = render partial:"render/link_right",locals:{text:'本人情報の登録について',address:"/"}
+        -# .link-right
+        -#   = link_to('本人情報の登録について',"/")
+        -#   %i.fas.fa-chevron-right
 = render 'top/footer'
