最初のフォームは余白０

--- a/app/views/address_registration/new.html.haml
+++ b/app/views/address_registration/new.html.haml
@@ -2,7 +2,7 @@
   .address__title 住所入力
   %form.address__content
     .address__content__box
-      .input-form-box
+      .input-form-box.first-form
         %label お名前
         %span.required 必須
         %input.input__form__group__input{placeholder:"例) 山田"}
