価格欄の修正

--- a/app/views/shared/_listing-form.html.haml
+++ b/app/views/shared/_listing-form.html.haml
@@ -115,11 +115,12 @@
             %input.listing__form__price__box__price__right__default{placeholder: "例）300", value: ""}
 
         .listing__form__price__box__fee
-          %label.listing__form__price__box__title
-            販売手数料(10%)
+          %p 販売手数料(10%)
+          %p -
+
         .listing__form__price__box__profit
-          %label.listing__form__price__box__profit__title
-            販売利益
+          %p 販売利益
+          %p -
 
     .listing__form__last
       .listing__form__last__attention
