--- a/app/assets/stylesheets/products/listing.scss
+++ b/app/assets/stylesheets/products/listing.scss
@@ -193,11 +193,15 @@
         }
         &__fee{
           @include listing-sub-title;
+          display: flex;
+          justify-content: space-between;
           padding: 24px 0;
           border-top: 1px solid #ccc;
         }
         &__profit{
           @include listing-sub-title;
+          display: flex;
+          justify-content: space-between;
           padding: 24px 0;
           border-top: 1px solid #ccc;
         }
