リンク先のpathを prefixに変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,5 +8,5 @@
 @import "./products/products";
 @import "./users/index";
 @import "./users/mypage_main";
-@import "./users/mypage_info_registration"
+@import "./users/mypage_info_registration";
 @import "registration_login";
