--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,5 +1,4 @@
 .listing-edit
   = render "shared/new-header"
-  = render "shared/new-form"
-  = render "shared/new-button"
+  = render "shared/new-listing-form"
   = render "shared/new-footer"
