--- a/app/views/shared/_new-form.html.haml
+++ b/app/views/shared/_new-form.html.haml
@@ -137,3 +137,8 @@
           また、出品をもちまして
           =link_to "加盟店規約", "https://www.mercari.com/jp/seller_terms/"
           に同意したことになります。
+
+      %button.btn-default.btn-red
+        出品する
+      %button.btn-default.btn-gray
+        もどる
